test/mlir/broadcast_bad_case_0.mlir.stderr
test/mlir/broadcast_bad_case_0.mlir:3:10: error: 'colgm.broadcast' op element type mismatch: input='f32', output='i32'
    %0 = colgm.broadcast %arg {target_shape = [2, 3, 4]} : tensor<1x3x4xf32> -> tensor<2x3x4xi32>
         ^
test/mlir/broadcast_bad_case_0.mlir:3:10: note: see current operation: %0 = "colgm.broadcast"(%arg0) {target_shape = [2, 3, 4]} : (tensor<1x3x4xf32>) -> tensor<2x3x4xi32>
